# TFM

./: .editorconfig  .envrc  .gitattributes  .gitignore  Manifest.toml  Project.toml  R-dependencies.txt  README.md  datasets.nix  datasets.toml  dependencies.txt  devenv.nix  devenv.yaml  flake.nix  pyproject.toml  run_till_success.sh
.github/: dependabot.yaml
document/: .gitignore  000-main.tex  001-preamble.tex  002-pgfplots-julia-preamble.tex  003-preamble-notex.tex  005-titlepage.tex  010-intro.tex  012-theoretical-background.tex  020-objectives.tex  030-implementation.tex  040-experiments.tex  050-analysis.tex  051-analysis-asinnorm.tex  051-analysis-frenay.tex  052-analysis-asin-vs-norm.tex  053-analysis-acos.tex  059-analysis-recap.tex  090-conclusions.tex  900-appendix.tex  biblio.bib  document.nix
nix/: datasets.nix  deps.jl  devenv.nix  document.nix  juliaPackageOverrides.toml  julia_link_pycall.jl  split_appendix.nix
scripts/: abalone.jl  cpu.jl  create_sysimage.jl  extract_features.jl  intro.jl  metafeature_extraction.py  models.jl  plots.jl  precompile_workflow.jl  produce_all.jl  produce_bank_inc.jl  produce_precomp_vs_native.jl  produce_synthetic.jl  run_all.jl  run_till_success.sh  save_datasets.jl  single.jl  stock.jl  stock_2.jl  tables.jl  triazines.jl  tuning.jl
slides/: biblio.bib  slides.tex
src/: Experiments.jl  TFM.jl  TopNCategoriesTransformer.jl  benchmark.jl  datasets.jl  experiments.jl  helpers.jl  measures.jl  meta-features.jl  models.jl  mse.jl  plots.jl  resampling.jl  transformers.jl  utils.jl
test/: runtests.jl
(+24 files in other folders)
