[tool.poetry]
name = "tfm"
version = "0.1.0"
description = ""
authors = ["LeixB <abone9999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
python-lsp-ruff = "^1.2.0"
python-lsp-server = {extras = ["all"], version = "^1.7.1"}
pylsp-mypy = "^0.6.6"
ipython = "^8.11.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
